# namma-bengaluru-reality-check

./: .env.example  .gitignore  README.md
.github/workflows/: supabase-keepalive.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/graph/: pipeline.py
backend/app/graph/nodes/: _decorator.py  _water_scoring.py  civic_water_node.py  commute_node.py  duplicate_node.py  extract_node.py  geocode_node.py  persist_node.py  scoring_node.py
backend/app/models/: schemas.py
backend/app/services/: cache.py  geocoding.py  llm_throttle.py  routing.py  spatial.py  supabase_client.py  water_data.py
backend/ingestion/: telegram_listener.py
backend/scripts/: load_gba_wards.py
data/processed/: tech_parks.json
data/raw/: groundwater_risk.csv
database/: schema.sql  seed_tech_parks.sql
database/migrations/: 001_prompt_cache.sql  002_gba_wards.sql  003_commute_cache.sql  004_dedup_and_loader.sql  005_persist_listing.sql  006_widen_cauvery_stage.sql  007_water_signals.sql  008_user_history.sql
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/: supabase.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/history/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AppProviders.tsx  AuthContext.tsx  ListingCard.tsx  LivabilityScorecard.tsx  Navigation.tsx  NavigationDynamic.tsx  PipelineVisualizer.tsx
frontend/src/lib/: listingsHistory.ts
