[project]
name = "namma-bengaluru-reality-check-backend"
version = "0.1.0"
description = "Backend for Namma Bengaluru Rental Reality-Check Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "langgraph>=0.0.69",
    "langchain>=0.2.6",
    "langchain-google-genai>=1.0.6",
    "supabase>=2.5.1",
    "httpx>=0.27.0",
    "geopandas>=0.14.4",
    "shapely>=2.0.4",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion"]
